Fixes #14942.  Move Tooltip offscreen when hidden to avoid reserving screen space.
git-svn-id: http://svn.dojotoolkit.org/src/branches/1.7/dojox@28079 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/iphone/Tooltip.css
+++ b/mobile/themes/iphone/Tooltip.css
@@ -134,6 +134,10 @@
 .mblTooltipHidden, .mblTooltipHidden * {
   visibility: hidden !important;
 }
+.mblTooltipHidden {
+  top: -99999px !important;
+  left: -99999px !important;
+}
 .mblTooltip .mblHeading {
   border-top: 3px solid #4F5055;
   border-bottom: 1px solid #2D3642;
